...
            padding: EdgeInsets.only(left: 15.w, right: 15.w),
            decoration: BoxDecoration(
              color: constTheme.buttonBg,
            ),
            alignment: Alignment.center,
            child: TextField(
              key: const Key("cratePrivateInput"),
              controller: id,
              autofocus: false,
              keyboardType: TextInputType.text,
              textInputAction: TextInputAction.go,
              style: TextStyle(color: constTheme.buttonColor.withAlpha(155), fontSize: 13.w),
              decoration: InputDecoration(
                label: null,
                hintText: '${L10n.of(context)!.enterUserID}：@username',
                hintStyle: TextStyle(height: 1.5, color: constTheme.buttonColor),
                contentPadding: const EdgeInsets.all(0),
                border: const OutlineInputBorder(borderSide: BorderSide.none),
                suffixIcon: IconButton(
                  key: const Key("cratePrivateSend"),
                  icon: Icon(Icons.send_rounded, color: constTheme.buttonColor),
                  onPressed: () async {
                    final client = im.currentState!.client;
                    final org = im.currentState!.org;
                    await waitFutureLoading(
                      context: globalCtx(),
...
