...
          SizedBox(
            width: 10.w,
          ),
          Expanded(
            flex: 1,
            child: TextFormField(
              key: const Key("chatInput"),
              controller: _msgController,
              style: TextStyle(
                color: constTheme.centerChannelColor,
                fontSize: 15.w,
              ),
              autofocus: false,
...
                color: constTheme.centerChannelColor.withAlpha(150),
                size: 25.w,
              ),
            ),
          if (msg != "")
            IconButton(
              key: const Key("chatSendIcon"),
              tooltip: "send",
              constraints: BoxConstraints(minWidth: 35.w, maxWidth: 35.w, minHeight: 35.w, maxHeight: 35.w),
              padding: EdgeInsets.zero,
              onPressed: () {
                if (_msgController.text == "") return;
                widget.room.sendTextEvent(_msgController.text);
...
