...
  }

  static Future<void> pop() async {
    exit(0);
  }

  selectAccountType() {
    final constTheme = Theme.of(context).extension<ExtColors>()!;
    showModalBottomSheet(
      context: context,
      constraints: BoxConstraints(maxWidth: 100.sw, minWidth: 100.sw),
      backgroundColor: constTheme.centerChannelBg,
      builder: (context) {
...
          mainAxisSize: MainAxisSize.min,
          children: [
            SizedBox(
              height: 25.w,
            ),
            InkWell(
              key: const Key("sr25519key"),
              child: Container(
                padding: const EdgeInsets.symmetric(
                  vertical: 15,
                ),
                width: MediaQuery.of(context).size.width * 0.8,
                alignment: Alignment.center,
...
